# quickstart_django

./: LICENCE  README.md  __main__.py  pyproject.toml
src/django_quickstart_package/: django_quickstart.py
src/quickstart_django/: __main__.py  quickstart_django.py  utils.py
src/quickstart_django/resources/: content.py
